@@ -1,1 +1,2 @@
-Initial version
+2014-05-20  First pre-release of fastnlo_interface_nlojet version 2.3.1pre revision 1785
+            ============================================================================
